--- a/src/app/app/search/searchbox/searchbox.component.html
+++ b/src/app/app/search/searchbox/searchbox.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12 has-feedback">
+  <div class="col-md-6 has-feedback">
       <form class="input-typeahead-form">
           <input [(ngModel)]="input"
                  [ngModelOptions]="{standalone: true}"
@@ -24,6 +24,9 @@
                         (optionSelected)="input = $event.option">
           </ux-typeahead>
       </form>
+  </div>
+  <div class="col-md-3">
+    <button type="button" class="m-b btn button-primary" style="float: right;">Search</button>
   </div>
 </div>
 
