--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -13,7 +13,7 @@
                 Home
             </ux-side-menu-item>
             <ux-side-menu-item routerLink="/Main/Search">
-                <ux-icon uxSideMenuItemIcon name="glass"></ux-icon>
+                <ux-icon uxSideMenuItemIcon name="search"></ux-icon>
                 Search
             </ux-side-menu-item>
             <ux-side-menu-item redirectTo="/Main/Profile">
