--- a/src/app/app/search/searchbox/searchbox.component.html
+++ b/src/app/app/search/searchbox/searchbox.component.html
@@ -1,32 +1,45 @@
-<div class="row">
-  <div class="col-md-6 has-feedback">
-      <form class="input-typeahead-form">
-          <input [(ngModel)]="input"
-                 [ngModelOptions]="{standalone: true}"
-                 placeholder="Enter Text"
-                 class="form-control"
-                 type="text"
-                 (click)="dropdownOpen = true"
-                 (keydown)="typeaheadKeyService.handleKey($event, typeahead)"
-                 (keydown.escape)="dropdownOpen = false"
-                 (blur)="dropdownOpen = false">
-
-          <ux-typeahead #typeahead
-                        class="typeahead-example"
-                        [(open)]="dropdownOpen"
-                        [filter]="input"
-                        [options]="loadOptionsFn"
-                        [openOnFilterChange]="true"
-                        [pageSize]="40"
-                        [selectOnEnter]="selectOnEnter"
-                        [selectFirst]="selectFirst"
-                        [dropDirection]="dropDirection"
-                        (optionSelected)="input = $event.option">
-          </ux-typeahead>
-      </form>
-  </div>
-  <div class="col-md-3">
-    <button type="button" class="m-b btn button-primary" style="float: right;">Search</button>
-  </div>
-</div>
+<table class="table">
+  <thead>
+      <tr>
+          <td class="searchtd">
+            <div class="has-feedback">
+              <form class="input-typeahead-form">
+                  <input [(ngModel)]="input"
+                         [ngModelOptions]="{standalone: true}"
+                         placeholder="Enter Text"
+                         class="form-control"
+                         type="text"
+                         (click)="dropdownOpen = true"
+                         (keydown)="typeaheadKeyService.handleKey($event, typeahead)"
+                         (keydown.escape)="dropdownOpen = false"
+                         (blur)="dropdownOpen = false">
+        
+                  <ux-typeahead #typeahead
+                                class="typeahead-example"
+                                [(open)]="dropdownOpen"
+                                [filter]="input"
+                                [options]="loadOptionsFn"
+                                [openOnFilterChange]="true"
+                                [pageSize]="40"
+                                [selectOnEnter]="selectOnEnter"
+                                [selectFirst]="selectFirst"
+                                [dropDirection]="dropDirection"
+                                (optionSelected)="input = $event.option">
+                  </ux-typeahead>
+              </form>
+          </div>
+          </td>
+          <td>
+            <div class="col-md-3">
+              <button type="button" class="m-b btn button-primary">Search</button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <app-idoldatabasedropdown></app-idoldatabasedropdown>
+            </td>
+        </tr>
+  </thead>
+</table>
 
