--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,9 +20,13 @@
               </div>
           </div>
           <div class="row">
-              <div class="form-group col-sm-3">
+              <div class="form-group col-md-12 form-buttons">
+                <div class="Submit">
                   <button type="submit" class="m-b btn button-primary">Login</button>
+                </div>
+                <div class="Cancel">
                   <button type="button" class="m-b btn button-secondary">Cancel</button>
+                </div>
               </div>
           </div>
           <div class="row">
