--- a/src/app/app/search/searchbox/searchbox.component.html
+++ b/src/app/app/search/searchbox/searchbox.component.html
@@ -10,7 +10,7 @@
                          class="form-control"
                          type="text"
                          (click)="dropdownOpen = true"
-                         (keydown)="typeaheadKeyService.handleKey($event, typeahead)"
+                         (keydown)="populateSearchBox($event, typeahead)"
                          (keydown.escape)="dropdownOpen = false"
                          (blur)="dropdownOpen = false">
         
