--- a/src/app/app/search/idoldatabasedropdown/idoldatabasedropdown.component.html
+++ b/src/app/app/search/idoldatabasedropdown/idoldatabasedropdown.component.html
@@ -22,7 +22,7 @@
                 </ng-template>
             </ux-combobox>
 
-            <p class="m-t-md">Searching database(s): <code>{{ comboboxValue | json }}</code></p>
+            <p class="m-t-md">Searching database(s): {{ comboboxValue.join(", ")}}</p>
         </div>
     </div>
 </div>  
